# BD-TP03

./: parteIV.ipynb  pyproject.toml  tp03.ipynb
