[project]
name = "bd-tp03"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Cordeiro da Camara",email = "eduardo.camara@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.4.7,<8.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
